#9 prefixed types used in xref

--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
@@ -378,7 +378,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Appointment colour, used only in Japanese versions. Western versions take colour from Task. See <xref href=\"ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Appointment colour, used only in Japanese versions. Western versions take colour from Task. See <xref href=\"CRMScript.NetServer.ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSAppointmentEntity thing;\nInteger colorIndex = thing.GetColorIndex();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAppointmentEntity.GetCompleted()
@@ -1534,7 +1534,7 @@ items:
     parameters:
     - id: colorIndex
       type: CRMScript.Global.Integer
-      description: Appointment colour, used only in Japanese versions. Western versions take colour from Task. See <xref href=\"ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Appointment colour, used only in Japanese versions. Western versions take colour from Task. See <xref href=\"CRMScript.NetServer.ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void 
   example: 
