--- a/docs/api-reference/CRMScript.NetServer.NSChatMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatMessage.yml
@@ -183,7 +183,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Indicates if it is a special message, such as a URL redirection. See <xref href=\"ChatMessageSpecialType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Indicates if it is a special message, such as a URL redirection. See <xref href=\"CRMScript.NetServer.ChatMessageSpecialType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSChatMessage thing;\nInteger specialType = thing.GetSpecialType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSChatMessage.GetType()
@@ -375,7 +375,7 @@ items:
     parameters:
     - id: specialType
       type: CRMScript.Global.Integer
-      description: Indicates if it is a special message, such as a URL redirection. See <xref href=\"ChatMessageSpecialType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Indicates if it is a special message, such as a URL redirection. See <xref href=\"CRMScript.NetServer.ChatMessageSpecialType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
