--- a/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
@@ -2182,7 +2182,7 @@ items:
       description: 
     - id: generatorEncoding
       type: CRMScript.Global.Integer
-      description: See <xref href=\"GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
     - id: contactId
       type: CRMScript.Global.Integer
       description: 
@@ -2252,7 +2252,7 @@ items:
       description: 
     - id: generatorEncoding
       type: CRMScript.Global.Integer
-      description: See <xref href=\"GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
     - id: customTags
       type: CRMScript.Global.String[]
       description: 
@@ -2308,7 +2308,7 @@ items:
       description: 
     - id: generatorEncoding
       type: CRMScript.Global.Integer
-      description: See <xref href=\"GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
     - id: customTags
       type: CRMScript.Global.Map
       description: 
