--- a/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
@@ -452,7 +452,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"DocumentLockSemantics\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.DocumentLockSemantics\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentEntity thing;\nInteger lockSemantics = thing.GetLockSemantics();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentEntity.GetName()
@@ -1162,7 +1162,7 @@ items:
     parameters:
     - id: lockSemantics
       type: CRMScript.Global.Integer
-      description: See <xref href=\"DocumentLockSemantics\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.DocumentLockSemantics\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
