--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplate.yml
@@ -127,7 +127,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: 1 = incoming, 2 = outgoing. See <xref href=\"TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
+      description: 1 = incoming, 2 = outgoing. See <xref href=\"CRMScript.NetServer.TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentTemplate thing;\nInteger direction = thing.GetDirection();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplate.GetDocumentTemplateId()
@@ -207,7 +207,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What type of quote document is this? See <xref href=\"DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: What type of quote document is this? See <xref href=\"CRMScript.NetServer.DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentTemplate thing;\nNSDocTmplQuoteType quoteDocType = thing.GetQuoteDocType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplate.GetRecordType()
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: direction
       type: CRMScript.Global.Integer
-      description: The direction of documents from this template. See <xref href=\"TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The direction of documents from this template. See <xref href=\"CRMScript.NetServer.TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -441,7 +441,7 @@ items:
     parameters:
     - id: quoteDocType
       type: CRMScript.Global.Integer
-      description: What type of quote document is this? See <xref href=\"DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: What type of quote document is this? See <xref href=\"CRMScript.NetServer.DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
