--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
@@ -140,7 +140,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: 1 = incoming, 2 = outgoing. See <xref href=\"TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
+      description: 1 = incoming, 2 = outgoing. See <xref href=\"CRMScript.NetServer.TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nInteger direction = thing.GetDirection();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetDocumentTemplateId()
@@ -280,7 +280,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Type for sending email meeting invitation. See <xref href=\"DocTmplInvitationType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Type for sending email meeting invitation. See <xref href=\"CRMScript.NetServer.DocTmplInvitationType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nInteger invitationDocType = thing.GetInvitationDocType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetIsDefaultPublished()
@@ -400,7 +400,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Indicator that this document template has a functional role, related to privacy/GDPR. See <xref href=\"DocTmplPrivacyType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Indicator that this document template has a functional role, related to privacy/GDPR. See <xref href=\"CRMScript.NetServer.DocTmplPrivacyType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nInteger privacyDocType = thing.GetPrivacyDocType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetQuoteDocType()
@@ -420,7 +420,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The role this document plays in the Quote system, if any. See <xref href=\"DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The role this document plays in the Quote system, if any. See <xref href=\"CRMScript.NetServer.DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nInteger quoteDocType = thing.GetQuoteDocType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetRank()
@@ -520,7 +520,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: If email template, when DocType is Privacy or quote email, it is possible to make sender address like our contact, or our support contact, or always one address. See <xref href=\"SenderMailMode\" data-throw-if-not-resolved=\"false\"></xref>
+      description: If email template, when DocType is Privacy or quote email, it is possible to make sender address like our contact, or our support contact, or always one address. See <xref href=\"CRMScript.NetServer.SenderMailMode\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nInteger senderEmailMode = thing.GetSenderEmailMode();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.GetShowCurrents()
@@ -661,7 +661,7 @@ items:
     parameters:
     - id: direction
       type: CRMScript.Global.Integer
-      description: See <xref href=\"TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -815,7 +815,7 @@ items:
     parameters:
     - id: invitationDocType
       type: CRMScript.Global.Integer
-      description: The role this document plays in the Quote system, if any. See <xref href=\"DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The role this document plays in the Quote system, if any. See <xref href=\"CRMScript.NetServer.DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -947,7 +947,7 @@ items:
     parameters:
     - id: privacyDocType
       type: CRMScript.Global.Integer
-      description: Indicator that this document template has a functional role, related to privacy/GDPR. See <xref href=\"DocTmplPrivacyType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Indicator that this document template has a functional role, related to privacy/GDPR. See <xref href=\"CRMScript.NetServer.DocTmplPrivacyType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -969,7 +969,7 @@ items:
     parameters:
     - id: quoteDocType
       type: CRMScript.Global.Integer
-      description: The role this document plays in the Quote system, if any. See <xref href=\"DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The role this document plays in the Quote system, if any. See <xref href=\"CRMScript.NetServer.DocTmplQuoteType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1079,7 +1079,7 @@ items:
     parameters:
     - id: senderEmailMode
       type: CRMScript.Global.Integer
-      description: If email template, when DocType is Privacy or quote email, it is possible to make sender address like our contact, or our support contact, or always one address. See <xref href=\"SenderMailMode\" data-throw-if-not-resolved=\"false\"></xref>
+      description: If email template, when DocType is Privacy or quote email, it is possible to make sender address like our contact, or our support contact, or always one address. See <xref href=\"CRMScript.NetServer.SenderMailMode\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
