--- a/docs/api-reference/CRMScript.NetServer.NSFieldMetadata.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldMetadata.yml
@@ -65,7 +65,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Access restrictions on the field. See <xref href=\"FieldAccess\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Access restrictions on the field. See <xref href=\"CRMScript.NetServer.FieldAccess\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSFieldMetadata thing;\nInteger access = thing.GetAccess();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldMetadata.GetDefaultValue()
@@ -165,7 +165,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Text, Integer, etc. See <xref href=\"FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Text, Integer, etc. See <xref href=\"CRMScript.NetServer.FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSFieldMetadata thing;\nInteger fieldType = thing.GetFieldType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldMetadata.GetListName()
@@ -265,7 +265,7 @@ items:
     parameters:
     - id: access
       type: CRMScript.Global.Integer
-      description: Access restrictions on the field. See <xref href=\"FieldAccess\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Access restrictions on the field. See <xref href=\"CRMScript.NetServer.FieldAccess\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -375,7 +375,7 @@ items:
     parameters:
     - id: fieldType
       type: CRMScript.Global.Integer
-      description: Text, Integer, etc. See <xref href=\"FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Text, Integer, etc. See <xref href=\"CRMScript.NetServer.FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
