--- a/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
@@ -329,7 +329,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What is the state of the reCAPTCHA configuration? This is a read-only member. See <xref href=\"FormsRecaptchaMode\" data-throw-if-not-resolved=\"false\"></xref>
+      description: What is the state of the reCAPTCHA configuration? This is a read-only member. See <xref href=\"CRMScript.NetServer.FormsRecaptchaMode\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSFormEntity thing;\nInteger recaptchaMode = thing.GetRecaptchaMode();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFormEntity.GetRecipe()
@@ -449,7 +449,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What kind of form is this? Indicates if this is a normal form or a template. See <xref href=\"FormType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What kind of form is this? Indicates if this is a normal form or a template. See <xref href=\"CRMScript.NetServer.FormType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSFormEntity thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFormEntity.GetUpdated()
@@ -793,7 +793,7 @@ items:
     parameters:
     - id: recaptchaMode
       type: CRMScript.Global.Integer
-      description: What is the state of the reCAPTCHA configuration? This is a read-only member. See <xref href=\"FormsRecaptchaMode\" data-throw-if-not-resolved=\"false\"></xref>
+      description: What is the state of the reCAPTCHA configuration? This is a read-only member. See <xref href=\"CRMScript.NetServer.FormsRecaptchaMode\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -925,7 +925,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: What kind of form is this? Indicates if this is a normal form or a template. See <xref href=\"FormType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What kind of form is this? Indicates if this is a normal form or a template. See <xref href=\"CRMScript.NetServer.FormType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
