--- a/docs/api-reference/CRMScript.NetServer.NSFormSubmissionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormSubmissionEntity.yml
@@ -225,7 +225,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The status of this submission. See <xref href=\"FormSubmissionStatus\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The status of this submission. See <xref href=\"CRMScript.NetServer.FormSubmissionStatus\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSFormSubmissionEntity thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFormSubmissionEntity.GetWhenSubmitted()
@@ -441,7 +441,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: What is the status of this submission. See <xref href=\"FormSubmissionStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What is the status of this submission. See <xref href=\"CRMScript.NetServer.FormSubmissionStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
