--- a/docs/api-reference/CRMScript.NetServer.NSFreeText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFreeText.yml
@@ -139,7 +139,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Starts with, contains or exact match. See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Starts with, contains or exact match. See <xref href=\"CRMScript.NetServer.FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSFreeText thing;\nInteger multiWordOperator = thing.GetMultiWordOperator();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFreeText.GetOccurrences()
@@ -179,7 +179,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Starts with, contains or exact match. See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Starts with, contains or exact match. See <xref href=\"CRMScript.NetServer.FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSFreeText thing;\nInteger singleWordOperator = thing.GetSingleWordOperator();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFreeText.SetAutoEnableTravelAreas(Bool)
@@ -287,7 +287,7 @@ items:
     parameters:
     - id: multiWordOperator
       type: CRMScript.Global.Integer
-      description: Starts with, contains or exact match. See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Starts with, contains or exact match. See <xref href=\"CRMScript.NetServer.FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -331,7 +331,7 @@ items:
     parameters:
     - id: singleWordOperator
       type: CRMScript.Global.Integer
-      description: Starts with, contains or exact match. See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Starts with, contains or exact match. See <xref href=\"CRMScript.NetServer.FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
