--- a/docs/api-reference/CRMScript.NetServer.NSFreeTextAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFreeTextAgent.yml
@@ -230,7 +230,7 @@ items:
     parameters:
     - id: freeTextOperator
       type: CRMScript.Global.Integer
-      description: See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -252,7 +252,7 @@ items:
     parameters:
     - id: freeTextOperator
       type: CRMScript.Global.Integer
-      description: See <xref href=\"FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.FreeTextOperator\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
