--- a/docs/api-reference/CRMScript.NetServer.NSHierarchyEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSHierarchyEntity.yml
@@ -85,7 +85,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Domain separating the different hierarchy. See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Domain separating the different hierarchy. See <xref href=\"CRMScript.NetServer.Domain\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSHierarchyEntity thing;\nInteger domain = thing.GetDomain();</code></pre>\n"
 - uid: CRMScript.NetServer.NSHierarchyEntity.GetFullname()
@@ -287,7 +287,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: Domain separating the different hierarchy. See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Domain separating the different hierarchy. See <xref href=\"CRMScript.NetServer.Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
