--- a/docs/api-reference/CRMScript.NetServer.NSImportLine.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportLine.yml
@@ -75,7 +75,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Which operation will be used? This is a read-only property. See <xref href=\"ImportAction\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Which operation will be used? This is a read-only property. See <xref href=\"CRMScript.NetServer.ImportAction\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSImportLine thing;\nInteger operation = thing.GetOperation();</code></pre>\n"
 - uid: CRMScript.NetServer.NSImportLine.GetSelected()
@@ -115,7 +115,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Which entity type will be created? This is a read-only property. See <xref href=\"ImportEntityType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Which entity type will be created? This is a read-only property. See <xref href=\"CRMScript.NetServer.ImportEntityType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSImportLine thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSImportLine.GetValues()
@@ -177,7 +177,7 @@ items:
     parameters:
     - id: operation
       type: CRMScript.Global.Integer
-      description: Which operation will be used? This is a read-only property. See <xref href=\"ImportAction\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Which operation will be used? This is a read-only property. See <xref href=\"CRMScript.NetServer.ImportAction\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -221,7 +221,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: Which entity type will be created? This is a read-only property. See <xref href=\"ImportEntityType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Which entity type will be created? This is a read-only property. See <xref href=\"CRMScript.NetServer.ImportEntityType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
