--- a/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
@@ -365,7 +365,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: path
       type: CRMScript.Global.String
       description: Hierarchy path to parent item
@@ -1015,7 +1015,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: path
       type: CRMScript.Global.String
       description: 
@@ -1378,7 +1378,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: children
       type: CRMScript.Global.Bool
       description: 
@@ -2860,7 +2860,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: path
       type: CRMScript.Global.String
       description: 
@@ -3341,7 +3341,7 @@ items:
     parameters:
     - id: textTypes
       type: CRMScript.Global.Integer[]
-      description: Array of localized text types. If null, all texts are returned. See <xref href=\"LocalizedTextType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Array of localized text types. If null, all texts are returned. See <xref href=\"CRMScript.NetServer.LocalizedTextType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSLocalizedText[]
   example: 
@@ -6270,7 +6270,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: See <xref href=\"Domain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.Domain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: path
       type: CRMScript.Global.String
       description: 
