--- a/docs/api-reference/CRMScript.NetServer.NSLocalizedText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLocalizedText.yml
@@ -157,7 +157,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The type of the text string, such as Field label, Udef label. See <xref href=\"LocalizedTextType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The type of the text string, such as Field label, Udef label. See <xref href=\"CRMScript.NetServer.LocalizedTextType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSLocalizedText thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSLocalizedText.SetIsBuiltIn(Bool)
@@ -287,7 +287,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: The type of the text string, such as Field label, Udef label. See <xref href=\"LocalizedTextType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The type of the text string, such as Field label, Udef label. See <xref href=\"CRMScript.NetServer.LocalizedTextType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
