--- a/docs/api-reference/CRMScript.NetServer.NSMailMergeSettings.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailMergeSettings.yml
@@ -327,7 +327,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: How the merged document is delivered to the recipients. See <xref href=\"EMailMergeTargetType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: How the merged document is delivered to the recipients. See <xref href=\"CRMScript.NetServer.EMailMergeTargetType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSMailMergeSettings thing;\nInteger mailMergeDeliveryType = thing.GetMailMergeDeliveryType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSMailMergeSettings.GetProjectId()
@@ -771,7 +771,7 @@ items:
     parameters:
     - id: mailMergeDeliveryType
       type: CRMScript.Global.Integer
-      description: How the merged document is delivered to the recipients. See <xref href=\"EMailMergeTargetType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: How the merged document is delivered to the recipients. See <xref href=\"CRMScript.NetServer.EMailMergeTargetType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
