--- a/docs/api-reference/CRMScript.NetServer.NSMailboxEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMailboxEntity.yml
@@ -159,7 +159,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The protocol to use (POP/IMAP). See <xref href=\"MailboxType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The protocol to use (POP/IMAP). See <xref href=\"CRMScript.NetServer.MailboxType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSMailboxEntity thing;\nInteger serverType = thing.GetServerType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSMailboxEntity.GetUsername()
@@ -309,7 +309,7 @@ items:
     parameters:
     - id: serverType
       type: CRMScript.Global.Integer
-      description: The protocol to use (POP/IMAP). See <xref href=\"MailboxType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The protocol to use (POP/IMAP). See <xref href=\"CRMScript.NetServer.MailboxType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
