--- a/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
@@ -333,7 +333,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: See <xref href=\"TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: targetId
       type: CRMScript.Global.Integer
       description: 
@@ -427,7 +427,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: See <xref href=\"TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: personId
       type: CRMScript.Global.Integer
       description: 
