--- a/docs/api-reference/CRMScript.NetServer.NSPhoneListPreferences.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPhoneListPreferences.yml
@@ -141,7 +141,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSPhoneListPreferences thing;\nInteger searchMode = thing.GetSearchModeCompany();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListPreferences.GetSearchModeDepartment()
@@ -161,7 +161,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSPhoneListPreferences thing;\nInteger searchMode = thing.GetSearchModeDepartment();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListPreferences.GetSearchModeFirstname()
@@ -181,7 +181,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSPhoneListPreferences thing;\nInteger searchMode = thing.GetSearchModeFirstname();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListPreferences.GetSearchModeLastname()
@@ -201,7 +201,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSPhoneListPreferences thing;\nInteger searchMode = thing.GetSearchModeLastname();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPhoneListPreferences.SetSearchCompany(Bool)
@@ -309,7 +309,7 @@ items:
     parameters:
     - id: searchMode
       type: CRMScript.Global.Integer
-      description: See <xref href=\"StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -331,7 +331,7 @@ items:
     parameters:
     - id: searchMode
       type: CRMScript.Global.Integer
-      description: See <xref href=\"StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: searchMode
       type: CRMScript.Global.Integer
-      description: See <xref href=\"StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -375,7 +375,7 @@ items:
     parameters:
     - id: searchMode
       type: CRMScript.Global.Integer
-      description: See <xref href=\"StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.StringSearchType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
