--- a/docs/api-reference/CRMScript.NetServer.NSPocketStartupData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketStartupData.yml
@@ -221,7 +221,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer[]
-      description: List of table rights for logged in user, in the same order as the Tables array parameter. See <xref href=\"ETableRight\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: List of table rights for logged in user, in the same order as the Tables array parameter. See <xref href=\"CRMScript.NetServer.ETableRight\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPocketStartupData thing;\nInteger[] tableRights = thing.GetTableRights();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketStartupData.SetBaseLocaleTimeZoneData(NSTimeZoneData)
@@ -417,7 +417,7 @@ items:
     parameters:
     - id: tableRights
       type: CRMScript.Global.Integer[]
-      description: List of table rights for logged in user, in the same order as the Tables array parameter. See <xref href=\"ETableRight\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: List of table rights for logged in user, in the same order as the Tables array parameter. See <xref href=\"CRMScript.NetServer.ETableRight\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
