--- a/docs/api-reference/CRMScript.NetServer.NSPreference.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreference.yml
@@ -87,7 +87,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Display type, populated when asked for. See <xref href=\"PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Display type, populated when asked for. See <xref href=\"CRMScript.NetServer.PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPreference thing;\nInteger displayType = thing.GetDisplayType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreference.GetDisplayValue()
@@ -308,7 +308,7 @@ items:
     parameters:
     - id: displayType
       type: CRMScript.Global.Integer
-      description: Display type, populated when asked for. See <xref href=\"PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Display type, populated when asked for. See <xref href=\"CRMScript.NetServer.PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
