--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceAgent.yml
@@ -434,7 +434,7 @@ items:
       description: 
     - id: prefLevel
       type: CRMScript.Global.Integer
-      description: See <xref href=\"PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSPreference
   example: 
@@ -462,7 +462,7 @@ items:
       description: 
     - id: prefLevel
       type: CRMScript.Global.Integer
-      description: See <xref href=\"PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: ownerId
       type: CRMScript.Global.Integer
       description: 
