--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceDescription.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceDescription.yml
@@ -81,7 +81,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"PrefDescAccessFlags\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.PrefDescAccessFlags\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPreferenceDescription thing;\nInteger accessFlags = thing.GetAccessFlags();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreferenceDescription.GetDescription()
@@ -161,7 +161,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Lowest allowed setting level, set by user, but not lower than enum <xref href=\"PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Lowest allowed setting level, set by user, but not lower than enum <xref href=\"CRMScript.NetServer.PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSPreferenceDescription thing;\nInteger maxLevel = thing.GetMaxLevel();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreferenceDescription.GetMaxValue()
@@ -361,7 +361,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Lowest allowed setting level, set by SuperOffice. See <xref href=\"PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Lowest allowed setting level, set by SuperOffice. See <xref href=\"CRMScript.NetServer.PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSPreferenceDescription thing;\nInteger sysMaxLevel = thing.GetSysMaxLevel();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreferenceDescription.GetTableName()
@@ -421,7 +421,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPreferenceDescription thing;\nInteger valueType = thing.GetValueType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreferenceDescription.SetAccessFlags(Integer)
@@ -441,7 +441,7 @@ items:
     parameters:
     - id: accessFlags
       type: CRMScript.Global.Integer
-      description: See <xref href=\"PrefDescAccessFlags\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.PrefDescAccessFlags\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -529,7 +529,7 @@ items:
     parameters:
     - id: maxLevel
       type: CRMScript.Global.Integer
-      description: Lowest allowed setting level, set by user, but not lower than sysMaxLevel. See <xref href=\"PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Lowest allowed setting level, set by user, but not lower than sysMaxLevel. See <xref href=\"CRMScript.NetServer.PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -749,7 +749,7 @@ items:
     parameters:
     - id: sysMaxLevel
       type: CRMScript.Global.Integer
-      description: Lowest allowed setting level, set by SuperOffice. See <xref href=\"PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Lowest allowed setting level, set by SuperOffice. See <xref href=\"CRMScript.NetServer.PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -815,7 +815,7 @@ items:
     parameters:
     - id: valueType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.PrefDescValueType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
