--- a/docs/api-reference/CRMScript.NetServer.NSPreviewMailing.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreviewMailing.yml
@@ -355,7 +355,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Status for sending to this particular recipient. See <xref href=\"ShipmentAddrStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Status for sending to this particular recipient. See <xref href=\"CRMScript.NetServer.ShipmentAddrStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPreviewMailing thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreviewMailing.SetContactId(Integer)
@@ -683,7 +683,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: Status for sending to this particular recipient. See <xref href=\"ShipmentAddrStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Status for sending to this particular recipient. See <xref href=\"CRMScript.NetServer.ShipmentAddrStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPreviewMailing thing;\nInteger status;\nthing.SetStatus(status);</code></pre>\n"
 references:
