--- a/docs/api-reference/CRMScript.NetServer.NSPreviewMailingHeader.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreviewMailingHeader.yml
@@ -355,7 +355,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Sending/stopped/failed etc. See <xref href=\"ShipmentStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Sending/stopped/failed etc. See <xref href=\"CRMScript.NetServer.ShipmentStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPreviewMailingHeader thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreviewMailingHeader.SetDocumentMessageId(Integer)
@@ -683,7 +683,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: Sending/stopped/failed etc. See <xref href=\"ShipmentStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Sending/stopped/failed etc. See <xref href=\"CRMScript.NetServer.ShipmentStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
