--- a/docs/api-reference/CRMScript.NetServer.NSProjectEventEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectEventEntity.yml
@@ -365,7 +365,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Type of publishing action. See <xref href=\"PublishType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Type of publishing action. See <xref href=\"CRMScript.NetServer.PublishType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSProjectEventEntity thing;\nInteger publishType = thing.GetPublishType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProjectEventEntity.GetSignOff()
@@ -991,7 +991,7 @@ items:
     parameters:
     - id: publishType
       type: CRMScript.Global.Integer
-      description: Type of publishing action. See <xref href=\"PublishType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Type of publishing action. See <xref href=\"CRMScript.NetServer.PublishType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
