--- a/docs/api-reference/CRMScript.NetServer.NSQuoteAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteAgent.yml
@@ -2435,7 +2435,7 @@ items:
       description: 
     - id: action
       type: CRMScript.Global.Integer
-      description: See <xref href=\"QuoteVersionButtonAction\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.QuoteVersionButtonAction\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSQuoteVersionValidated
   example: 
