--- a/docs/api-reference/CRMScript.NetServer.NSQuoteLine.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteLine.yml
@@ -803,7 +803,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"CRMScript.NetServer.QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteLine thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteLine.GetSubscriptionQuantity()
@@ -1063,7 +1063,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Has the pre-calculated (from ERP) price information been overridden, and how. See <xref href=\"ValueOverride\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Has the pre-calculated (from ERP) price information been overridden, and how. See <xref href=\"CRMScript.NetServer.ValueOverride\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteLine thing;\nInteger userValueOverride = thing.GetUserValueOverride();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteLine.GetVAT()
@@ -1849,7 +1849,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: If there was a problem with for instance calculation, this field is set to warning or error. Typically shown as an icon. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: If there was a problem with for instance calculation, this field is set to warning or error. Typically shown as an icon. See <xref href=\"CRMScript.NetServer.QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2135,7 +2135,7 @@ items:
     parameters:
     - id: userValueOverride
       type: CRMScript.Global.Integer
-      description: Has the pre-calculated (from ERP) price information been overridden, and how. See <xref href=\"ValueOverride\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Has the pre-calculated (from ERP) price information been overridden, and how. See <xref href=\"CRMScript.NetServer.ValueOverride\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
