--- a/docs/api-reference/CRMScript.NetServer.NSQuoteVersion.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteVersion.yml
@@ -199,7 +199,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: State that this quote version had, right before it was changed to Archived. See <xref href=\"QuoteVersionState\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: State that this quote version had, right before it was changed to Archived. See <xref href=\"CRMScript.NetServer.QuoteVersionState\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteVersion thing;\nInteger archivedState = thing.GetArchivedState();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersion.GetDeliveryCountryId()
@@ -779,7 +779,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Current state of this quote version. See <xref href=\"QuoteVersionState\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Current state of this quote version. See <xref href=\"CRMScript.NetServer.QuoteVersionState\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteVersion thing;\nInteger state = thing.GetState();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersion.GetStatus()
@@ -799,7 +799,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"CRMScript.NetServer.QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteVersion thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersion.GetUpdated()
@@ -947,7 +947,7 @@ items:
     parameters:
     - id: archivedState
       type: CRMScript.Global.Integer
-      description: State that this quote version had, right before it was changed to Archived; in this way we can show what happened before the archiving. See <xref href=\"QuoteVersionState\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: State that this quote version had, right before it was changed to Archived; in this way we can show what happened before the archiving. See <xref href=\"CRMScript.NetServer.QuoteVersionState\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1585,7 +1585,7 @@ items:
     parameters:
     - id: state
       type: CRMScript.Global.Integer
-      description: Current state of this quote version. See <xref href=\"QuoteVersionState\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Current state of this quote version. See <xref href=\"CRMScript.NetServer.QuoteVersionState\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1607,7 +1607,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"CRMScript.NetServer.QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
