--- a/docs/api-reference/CRMScript.NetServer.NSQuoteVersionStatusInformation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteVersionStatusInformation.yml
@@ -113,7 +113,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Status information for the quote version. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Status information for the quote version. See <xref href=\"CRMScript.NetServer.QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteVersionStatusInformation thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.SetDisplayMessage(String)
@@ -199,7 +199,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: Status information for the quote version. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Status information for the quote version. See <xref href=\"CRMScript.NetServer.QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
