--- a/docs/api-reference/CRMScript.NetServer.NSRelationDefinitionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRelationDefinitionEntity.yml
@@ -81,7 +81,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The destination of the relation. See <xref href=\"RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The destination of the relation. See <xref href=\"CRMScript.NetServer.RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger destination = thing.GetDestination();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetName()
@@ -181,7 +181,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The source of the relation. See <xref href=\"RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The source of the relation. See <xref href=\"CRMScript.NetServer.RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSRelationDefinitionEntity thing;\nInteger source = thing.GetSource();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRelationDefinitionEntity.GetTooltip()
@@ -243,7 +243,7 @@ items:
     parameters:
     - id: destination
       type: CRMScript.Global.Integer
-      description: The destination of the relation. See <xref href=\"RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The destination of the relation. See <xref href=\"CRMScript.NetServer.RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: source
       type: CRMScript.Global.Integer
-      description: The source of the relation. See <xref href=\"RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The source of the relation. See <xref href=\"CRMScript.NetServer.RelationTarget\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
