--- a/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
@@ -141,7 +141,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The category of the report. See <xref href=\"ReportCategory\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The category of the report. See <xref href=\"CRMScript.NetServer.ReportCategory\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSReportEntity thing;\nInteger reportCategory = thing.GetReportCategory();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportEntity.GetReportId()
@@ -181,7 +181,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The layout of the report. See <xref href=\"ReportLayout\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The layout of the report. See <xref href=\"CRMScript.NetServer.ReportLayout\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSReportEntity thing;\nInteger reportLayout = thing.GetReportLayout();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportEntity.GetTemplateId()
@@ -309,7 +309,7 @@ items:
     parameters:
     - id: reportCategory
       type: CRMScript.Global.Integer
-      description: The category of the report. See <xref href=\"ReportCategory\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The category of the report. See <xref href=\"CRMScript.NetServer.ReportCategory\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: reportLayout
       type: CRMScript.Global.Integer
-      description: The layout of the report. See <xref href=\"ReportLayout\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The layout of the report. See <xref href=\"CRMScript.NetServer.ReportLayout\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
