--- a/docs/api-reference/CRMScript.NetServer.NSReportLabelLayoutEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportLabelLayoutEntity.yml
@@ -189,7 +189,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Paper orientation 1=portrait, 2=landscape. See <xref href=\"ReportPaperOrientation\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Paper orientation 1=portrait, 2=landscape. See <xref href=\"CRMScript.NetServer.ReportPaperOrientation\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSReportLabelLayoutEntity thing;\nInteger orientation = thing.GetOrientation();</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportLabelLayoutEntity.GetPaperHeight()
@@ -441,7 +441,7 @@ items:
     parameters:
     - id: orientation
       type: CRMScript.Global.Integer
-      description: Paper orientation. 1=portrait, 2=landscape. See <xref href=\"ReportPaperOrientation\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Paper orientation. 1=portrait, 2=landscape. See <xref href=\"CRMScript.NetServer.ReportPaperOrientation\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
