--- a/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRoleEntity.yml
@@ -209,7 +209,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The role type. See <xref href=\"RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The role type. See <xref href=\"CRMScript.NetServer.RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSRoleEntity thing;\nInteger roleType = thing.GetRoleType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSRoleEntity.GetTooltip()
@@ -463,7 +463,7 @@ items:
     parameters:
     - id: roleType
       type: CRMScript.Global.Integer
-      description: The role type. Note that changing this field has no effect, so treat this as a read-only field. See <xref href=\"RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The role type. Note that changing this field has no effect, so treat this as a read-only field. See <xref href=\"CRMScript.NetServer.RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
