--- a/docs/api-reference/CRMScript.NetServer.NSSale.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSale.yml
@@ -535,7 +535,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The sale's status, indicating wether the sale is open, sold or lost. See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The sale's status, indicating wether the sale is open, sold or lost. See <xref href=\"CRMScript.NetServer.SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSale thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSale.GetTitle()
@@ -1079,7 +1079,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: The sale's status, indicating wether the sale is open, sold or lost. See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The sale's status, indicating wether the sale is open, sold or lost. See <xref href=\"CRMScript.NetServer.SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
