--- a/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
@@ -902,7 +902,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The state of the Sale (Open, Sold, Lost, Stalled). See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The state of the Sale (Open, Sold, Lost, Stalled). See <xref href=\"CRMScript.NetServer.SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSaleEntity thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSaleEntity.GetUpdatedBy()
@@ -1853,7 +1853,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: The state of the Sale (Open,Sold,Lost,Stalled). See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The state of the Sale (Open,Sold,Lost,Stalled). See <xref href=\"CRMScript.NetServer.SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
