--- a/docs/api-reference/CRMScript.NetServer.NSSaleSummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleSummaryItem.yml
@@ -105,7 +105,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The Completed state. NotStarted(1) or Completed(3). See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The Completed state. NotStarted(1) or Completed(3). See <xref href=\"CRMScript.NetServer.SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSaleSummaryItem thing;\nInteger completed = thing.GetCompleted();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSaleSummaryItem.GetCurrency()
@@ -245,7 +245,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The sale's status, indicating whether the sale is open(1), sold(2) or lost(3). See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The sale's status, indicating whether the sale is open(1), sold(2) or lost(3). See <xref href=\"CRMScript.NetServer.SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSaleSummaryItem thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSaleSummaryItem.SetAmount(Float)
@@ -463,7 +463,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: The sale's status, indicating whether the sale is open(1), sold(2) or lost(3). See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The sale's status, indicating whether the sale is open(1), sold(2) or lost(3). See <xref href=\"CRMScript.NetServer.SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
