--- a/docs/api-reference/CRMScript.NetServer.NSSaleTypeEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleTypeEntity.yml
@@ -169,7 +169,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Units for the duration (day, week, whatever). See <xref href=\"DurationUnit\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Units for the duration (day, week, whatever). See <xref href=\"CRMScript.NetServer.DurationUnit\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSaleTypeEntity thing;\nInteger durationUnit = thing.GetDurationUnit();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSaleTypeEntity.GetGroupQuoteLinesBy()
@@ -617,7 +617,7 @@ items:
     parameters:
     - id: durationUnit
       type: CRMScript.Global.Integer
-      description: Units for the duration (day, week, whatever) See <xref href=\"DurationUnit\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Units for the duration (day, week, whatever) See <xref href=\"CRMScript.NetServer.DurationUnit\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
