--- a/docs/api-reference/CRMScript.NetServer.NSSelectionAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionAgent.yml
@@ -290,7 +290,7 @@ items:
       description: 
     - id: targetSelectionType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: copyMembers
       type: CRMScript.Global.Bool
       description: 
@@ -448,7 +448,7 @@ items:
       description: 
     - id: targetSelectionType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: copyMembers
       type: CRMScript.Global.Bool
       description: 
