--- a/docs/api-reference/CRMScript.NetServer.NSSelectionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionEntity.yml
@@ -664,7 +664,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Static/Dynamic/Combined? See <xref href=\"SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Static/Dynamic/Combined? See <xref href=\"CRMScript.NetServer.SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSSelectionEntity thing;\nInteger selectionType = thing.GetSelectionType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSelectionEntity.GetSelectionUnionType()
@@ -684,7 +684,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: How to combine the two selections when SelectionType = Combined. See <xref href=\"SelectionUnionType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: How to combine the two selections when SelectionType = Combined. See <xref href=\"CRMScript.NetServer.SelectionUnionType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSelectionEntity thing;\nInteger selectionUnionType = thing.GetSelectionUnionType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSelectionEntity.GetShadowProviderName()
@@ -1515,7 +1515,7 @@ items:
     parameters:
     - id: selectionType
       type: CRMScript.Global.Integer
-      description: Static/Dynamic/Combined? See <xref href=\"SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Static/Dynamic/Combined? See <xref href=\"CRMScript.NetServer.SelectionType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1537,7 +1537,7 @@ items:
     parameters:
     - id: selectionUnionType
       type: CRMScript.Global.Integer
-      description: How to combine the two selections when SelectionType = Combined. See <xref href=\"SelectionUnionType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: How to combine the two selections when SelectionType = Combined. See <xref href=\"CRMScript.NetServer.SelectionUnionType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
