--- a/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
@@ -147,7 +147,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The type of the design. See <xref href=\"DesignType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The type of the design. See <xref href=\"CRMScript.NetServer.DesignType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSShipmentMessageEntity thing;\nInteger designType = thing.GetDesigntype();</code></pre>\n"
 - uid: CRMScript.NetServer.NSShipmentMessageEntity.GetDocumentMessage()
@@ -573,7 +573,7 @@ items:
     parameters:
     - id: designType
       type: CRMScript.Global.Integer
-      description: The type of the design. See <xref href=\"DesignType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The type of the design. See <xref href=\"CRMScript.NetServer.DesignType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
