--- a/docs/api-reference/CRMScript.NetServer.NSSystemEventEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSystemEventEntity.yml
@@ -205,7 +205,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"SystemEventScope\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.SystemEventScope\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSSystemEventEntity thing;\nInteger scope = thing.GetScope();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSystemEventEntity.GetSystemEventId()
@@ -419,7 +419,7 @@ items:
     parameters:
     - id: scope
       type: CRMScript.Global.Integer
-      description: See <xref href=\"SystemEventScope\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.SystemEventScope\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
