--- a/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTaskListItem.yml
@@ -71,7 +71,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: JAP. See <xref href=\"ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: JAP. See <xref href=\"CRMScript.NetServer.ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTaskListItem thing;\nInteger colorIndex = thing.GetColorIndex();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTaskListItem.GetDefaultVideomeetingStatus()
@@ -91,7 +91,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Default video-meeting status for meetings created in SuperOffice CRM. See <xref href=\"VideoMeetingStatus\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Default video-meeting status for meetings created in SuperOffice CRM. See <xref href=\"CRMScript.NetServer.VideoMeetingStatus\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSTaskListItem thing;\nInteger defaultVideomeetingStatus = thing.GetDefaultVideomeetingStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTaskListItem.GetDeleted()
@@ -131,7 +131,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: 1 = incoming, 2 = outgoing. See <xref href=\"TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
+      description: 1 = incoming, 2 = outgoing. See <xref href=\"CRMScript.NetServer.TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSTaskListItem thing;\nInteger direction = thing.GetDirection();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTaskListItem.GetIntentId()
@@ -331,7 +331,7 @@ items:
     parameters:
     - id: colorIndex
       type: CRMScript.Global.Integer
-      description: JAP. See <xref href=\"ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: JAP. See <xref href=\"CRMScript.NetServer.ColorIndex\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -353,7 +353,7 @@ items:
     parameters:
     - id: defaultVideomeetingStatus
       type: CRMScript.Global.Integer
-      description: Default video-meeting status for meetings created in SuperOffice CRM. See <xref href=\"VideoMeetingStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Default video-meeting status for meetings created in SuperOffice CRM. See <xref href=\"CRMScript.NetServer.VideoMeetingStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -397,7 +397,7 @@ items:
     parameters:
     - id: direction
       type: CRMScript.Global.Integer
-      description: 1 = incoming, 2 = outgoing. See <xref href=\"TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
+      description: 1 = incoming, 2 = outgoing. See <xref href=\"CRMScript.NetServer.TaskDirection\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
