--- a/docs/api-reference/CRMScript.NetServer.NSTemplateVariablesParameters.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTemplateVariablesParameters.yml
@@ -195,7 +195,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Encoding of source string. See <xref href=\"GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Encoding of source string. See <xref href=\"CRMScript.NetServer.GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSTemplateVariablesParameters thing;\nInteger encoding = thing.GetEncoding();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTemplateVariablesParameters.GetPersonId()
@@ -507,7 +507,7 @@ items:
     parameters:
     - id: encoding
       type: CRMScript.Global.Integer
-      description: Encoding of source string. See <xref href=\"GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Encoding of source string. See <xref href=\"CRMScript.NetServer.GeneratorEncoding\" data-throw-if-not-resolved=\"false\"></xref>
     return: 
       type: CRMScript.Global.Void
   example: 
