--- a/docs/api-reference/CRMScript.NetServer.NSTemporaryKeyInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTemporaryKeyInfo.yml
@@ -53,7 +53,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The domain for this key. Unknown if key is not valid. See <xref href=\"TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The domain for this key. Unknown if key is not valid. See <xref href=\"CRMScript.NetServer.TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTemporaryKeyInfo thing;\nInteger domain = thing.GetDomain();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTemporaryKeyInfo.GetIsExpired()
@@ -133,7 +133,7 @@ items:
     parameters:
     - id: domain
       type: CRMScript.Global.Integer
-      description: The domain for this key. Unknown if key is not valid. See <xref href=\"TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The domain for this key. Unknown if key is not valid. See <xref href=\"CRMScript.NetServer.TemporaryKeyDomain\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
