--- a/docs/api-reference/CRMScript.NetServer.NSTicket.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicket.yml
@@ -223,7 +223,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The status of the ticket. See <xref href=\"TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The status of the ticket. See <xref href=\"CRMScript.NetServer.TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicket thing;\nInteger baseStatus = thing.GetBaseStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicket.GetCategory()
@@ -563,7 +563,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What is the origin of this ticket? See <xref href=\"TicketOrigin\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What is the origin of this ticket? See <xref href=\"CRMScript.NetServer.TicketOrigin\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicket thing;\nInteger origin = thing.GetOrigin();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicket.GetOwnedBy()
@@ -783,7 +783,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"CRMScript.NetServer.TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicket thing;\nInteger readStatus = thing.GetReadStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicket.GetRealTimeSpentExternally()
@@ -923,7 +923,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The security-level of the ticket. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The security-level of the ticket. See <xref href=\"CRMScript.NetServer.TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicket thing;\nInteger slevel = thing.GetSlevel();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicket.GetTicketId()
@@ -1211,7 +1211,7 @@ items:
     parameters:
     - id: baseStatus
       type: CRMScript.Global.Integer
-      description: The status of the ticket. See <xref href=\"TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The status of the ticket. See <xref href=\"CRMScript.NetServer.TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1585,7 +1585,7 @@ items:
     parameters:
     - id: origin
       type: CRMScript.Global.Integer
-      description: What is the origin of this ticket? See <xref href=\"TicketOrigin\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What is the origin of this ticket? See <xref href=\"CRMScript.NetServer.TicketOrigin\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1827,7 +1827,7 @@ items:
     parameters:
     - id: readStatus
       type: CRMScript.Global.Integer
-      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"CRMScript.NetServer.TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1981,7 +1981,7 @@ items:
     parameters:
     - id: slevel
       type: CRMScript.Global.Integer
-      description: The security-level of the ticket. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The security-level of the ticket. See <xref href=\"CRMScript.NetServer.TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
