--- a/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
@@ -643,7 +643,7 @@ items:
       description: 
     - id: readStatus
       type: CRMScript.Global.Integer
-      description: See <xref href=\"TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: checkEscalating
       type: CRMScript.Global.Bool
       description: 
