--- a/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
@@ -115,7 +115,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Should new requests have the 'close request' in this category checked as default, or should the users preferences be selected? See <xref href=\"TicketCategoryClosingStatus\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Should new requests have the 'close request' in this category checked as default, or should the users preferences be selected? See <xref href=\"CRMScript.NetServer.TicketCategoryClosingStatus\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSTicketCategoryEntity thing;\nInteger closingStatus = thing.GetClosingStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketCategoryEntity.GetCustomFields()
@@ -155,7 +155,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: An integer indicating the delegation method for this category. See <xref href=\"TicketCategoryDelegateMethod\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: An integer indicating the delegation method for this category. See <xref href=\"CRMScript.NetServer.TicketCategoryDelegateMethod\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketCategoryEntity thing;\nInteger delegateMethod = thing.GetDelegateMethod();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketCategoryEntity.GetExternalName()
@@ -255,7 +255,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Should new messages have the 'close request' in this category checked as default, or should the users preferences be selected? See <xref href=\"TicketCategoryClosingStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Should new messages have the 'close request' in this category checked as default, or should the users preferences be selected? See <xref href=\"CRMScript.NetServer.TicketCategoryClosingStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketCategoryEntity thing;\nInteger msgClosingStatus = thing.GetMsgClosingStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketCategoryEntity.GetName()
@@ -419,7 +419,7 @@ items:
     parameters:
     - id: closingStatus
       type: CRMScript.Global.Integer
-      description: Should new requests have the 'close request' in this category checked as default, or should the users preferences be selected. See <xref href=\"TicketCategoryClosingStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Should new requests have the 'close request' in this category checked as default, or should the users preferences be selected. See <xref href=\"CRMScript.NetServer.TicketCategoryClosingStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -461,7 +461,7 @@ items:
     parameters:
     - id: delegateMethod
       type: CRMScript.Global.Integer
-      description: An integer indicating the delegation method for this category. See <xref href=\"TicketCategoryDelegateMethod\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: An integer indicating the delegation method for this category. See <xref href=\"CRMScript.NetServer.TicketCategoryDelegateMethod\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -569,7 +569,7 @@ items:
     parameters:
     - id: msgClosingStatus
       type: CRMScript.Global.Integer
-      description: Should new messages have the 'close request' in this category checked as default, or should the users preferences be selected? See <xref href=\"TicketCategoryClosingStatus\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Should new messages have the 'close request' in this category checked as default, or should the users preferences be selected? See <xref href=\"CRMScript.NetServer.TicketCategoryClosingStatus\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
