--- a/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
@@ -198,7 +198,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The status of the ticket. See <xref href=\"TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The status of the ticket. See <xref href=\"CRMScript.NetServer.TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSTicketEntity thing;\nInteger baseStatus = thing.GetBaseStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketEntity.GetCategory()
@@ -515,7 +515,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"TicketOrigin\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.TicketOrigin\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketEntity thing;\nInteger origin = thing.GetOrigin();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketEntity.GetOwnedBy()
@@ -632,7 +632,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"CRMScript.NetServer.TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketEntity thing;\nInteger readStatus = thing.GetReadStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketEntity.GetRealTimeSpentExternally()
@@ -791,7 +791,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The security level of the ticket. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The security level of the ticket. See <xref href=\"CRMScript.NetServer.TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketEntity thing;\nInteger slevel = thing.GetSlevel();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketEntity.GetStatus()
@@ -1082,7 +1082,7 @@ items:
     parameters:
     - id: baseStatus
       type: CRMScript.Global.Integer
-      description: The status of the ticket. See <xref href=\"TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The status of the ticket. See <xref href=\"CRMScript.NetServer.TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1384,7 +1384,7 @@ items:
     parameters:
     - id: origin
       type: CRMScript.Global.Integer
-      description: What is the origin of this ticket? See <xref href=\"TicketOrigin\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What is the origin of this ticket? See <xref href=\"CRMScript.NetServer.TicketOrigin\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1501,7 +1501,7 @@ items:
     parameters:
     - id: readStatus
       type: CRMScript.Global.Integer
-      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Whether the owner has read the ticket or not (red, yellow, green). See <xref href=\"CRMScript.NetServer.TicketReadStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1672,7 +1672,7 @@ items:
     parameters:
     - id: slevel
       type: CRMScript.Global.Integer
-      description: The security level of the ticket. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The security level of the ticket. See <xref href=\"CRMScript.NetServer.TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
