--- a/docs/api-reference/CRMScript.NetServer.NSTicketMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketMessage.yml
@@ -269,7 +269,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The security-level of the message. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The security-level of the message. See <xref href=\"CRMScript.NetServer.TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketMessage thing;\nInteger slevel = thing.GetSlevel();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketMessage.GetTicketMessageId()
@@ -529,7 +529,7 @@ items:
     parameters:
     - id: slevel
       type: CRMScript.Global.Integer
-      description: The security-level of the message. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The security-level of the message. See <xref href=\"CRMScript.NetServer.TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
