--- a/docs/api-reference/CRMScript.NetServer.NSTicketMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketMessageEntity.yml
@@ -311,7 +311,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Defines what kind of message this is. See <xref href=\"TicketMessageCategory\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Defines what kind of message this is. See <xref href=\"CRMScript.NetServer.TicketMessageCategory\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketMessageEntity thing;\nInteger messageCategory = thing.GetMessageCategory();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketMessageEntity.GetMessageHeaders()
@@ -409,7 +409,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The security level of the message. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The security level of the message. See <xref href=\"CRMScript.NetServer.TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketMessageEntity thing;\nInteger slevel = thing.GetSlevel();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketMessageEntity.GetTicket()
@@ -468,7 +468,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The type of the message (plaintext/html). See <xref href=\"TicketMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The type of the message (plaintext/html). See <xref href=\"CRMScript.NetServer.TicketMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketMessageEntity thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketMessageEntity.#ctor
@@ -747,7 +747,7 @@ items:
     parameters:
     - id: messageCategory
       type: CRMScript.Global.Integer
-      description: Defines what kind of message this is. See <xref href=\"TicketMessageCategory\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Defines what kind of message this is. See <xref href=\"CRMScript.NetServer.TicketMessageCategory\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketMessageEntity thing;\nInteger messageCategory;\nthing.SetMessageCategory(messageCategory);</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketMessageEntity.SetMessageHeaders()
@@ -850,7 +850,7 @@ items:
     parameters:
     - id: slevel
       type: CRMScript.Global.Integer
-      description: The security level of the message. See <xref href=\"TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The security level of the message. See <xref href=\"CRMScript.NetServer.TicketSecurityLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -916,7 +916,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: The type of the message (plaintext/html). See <xref href=\"TicketMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The type of the message (plaintext/html). See <xref href=\"CRMScript.NetServer.TicketMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketMessageEntity thing;\nInteger type;\nthing.SetType(type);</code></pre>\n"
 references:
