--- a/docs/api-reference/CRMScript.NetServer.NSTicketPriorityEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketPriorityEntity.yml
@@ -99,7 +99,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What to do with the escalation chain when the request changes owner (manually). See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What to do with the escalation chain when the request changes owner (manually). See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger changedOwner = thing.GetChangedOwner();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetDeadline()
@@ -439,7 +439,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What to do with the escalation chain when the request is changed into this priority. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What to do with the escalation chain when the request is changed into this priority. See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger ticketChangedPriority = thing.GetTicketChangedPriority();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketClosed()
@@ -459,7 +459,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: indicates what to do with the escalation chain when the request is closed. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: indicates what to do with the escalation chain when the request is closed. See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger ticketClosed = thing.GetTicketClosed();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketNew()
@@ -479,7 +479,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What to do with the escalation chain when a new request is registered. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What to do with the escalation chain when a new request is registered. See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger ticketNew = thing.GetTicketNew();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketNewinfo()
@@ -499,7 +499,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What to do with the escalation chain when the request gets new info. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What to do with the escalation chain when the request gets new info. See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger ticketNewinfo = thing.GetTicketNewinfo();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketPriorityId()
@@ -539,7 +539,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What to do with the escalation chain when the request is read. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What to do with the escalation chain when the request is read. See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger ticketRead = thing.GetTicketRead();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetTueStart()
@@ -639,7 +639,7 @@ items:
     parameters:
     - id: changedOwner
       type: CRMScript.Global.Integer
-      description: What to do with the escalation chain when the request changes owner (manually). See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What to do with the escalation chain when the request changes owner (manually). See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1013,7 +1013,7 @@ items:
     parameters:
     - id: ticketChangedPriority
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when the request is changed into this priority. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Indicates what to do with the escalation chain when the request is changed into this priority. See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1035,7 +1035,7 @@ items:
     parameters:
     - id: ticketClosed
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when the request is closed. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Indicates what to do with the escalation chain when the request is closed. See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1057,7 +1057,7 @@ items:
     parameters:
     - id: ticketNew
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when a new request is registered. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Indicates what to do with the escalation chain when a new request is registered. See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1079,7 +1079,7 @@ items:
     parameters:
     - id: ticketNewinfo
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when the request gets new info. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Indicates what to do with the escalation chain when the request gets new info. See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1123,7 +1123,7 @@ items:
     parameters:
     - id: ticketRead
       type: CRMScript.Global.Integer
-      description: What to do with the escalation chain when the request is read. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What to do with the escalation chain when the request is read. See <xref href=\"CRMScript.NetServer.TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
