--- a/docs/api-reference/CRMScript.NetServer.NSTicketStatusEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketStatusEntity.yml
@@ -95,7 +95,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The classic ticket status (active/closed/postponed/deleted). See <xref href=\"TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The classic ticket status (active/closed/postponed/deleted). See <xref href=\"CRMScript.NetServer.TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketStatusEntity thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketStatusEntity.GetTicketStatusId()
@@ -135,7 +135,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Which field in ticket we count time spent on (queue, internal, external). See <xref href=\"TicketStatusTimeCounter\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Which field in ticket we count time spent on (queue, internal, external). See <xref href=\"CRMScript.NetServer.TicketStatusTimeCounter\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketStatusEntity thing;\nInteger timeCounter = thing.GetTimeCounter();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketStatusEntity.SetName(String)
@@ -199,7 +199,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: The classic ticket status (active/closed/postponed/deleted). See <xref href=\"TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The classic ticket status (active/closed/postponed/deleted). See <xref href=\"CRMScript.NetServer.TicketBaseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -243,7 +243,7 @@ items:
     parameters:
     - id: timeCounter
       type: CRMScript.Global.Integer
-      description: Which field in ticket we count time spent on (queue, internal, external). See <xref href=\"TicketStatusTimeCounter\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Which field in ticket we count time spent on (queue, internal, external). See <xref href=\"CRMScript.NetServer.TicketStatusTimeCounter\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
