--- a/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfo.yml
@@ -235,7 +235,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefFieldType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefFieldType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSUserDefinedFieldInfo thing;\nInteger fieldType = thing.GetFieldType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSUserDefinedFieldInfo.GetFieldWidth()
@@ -395,7 +395,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Justification. See <xref href=\"UdefJustification\" data-throw-if-not-resolved=\"false\"></xref>
+      description: Justification. See <xref href=\"CRMScript.NetServer.UdefJustification\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSUserDefinedFieldInfo thing;\nInteger justification = thing.GetJustification();</code></pre>\n"
 - uid: CRMScript.NetServer.NSUserDefinedFieldInfo.GetLabelHeight()
@@ -714,7 +714,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: ID of owning table (contact, person, project). See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: ID of owning table (contact, person, project). See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSUserDefinedFieldInfo thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSUserDefinedFieldInfo.GetUDefFieldId()
@@ -946,7 +946,7 @@ items:
     parameters:
     - id: fieldType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefFieldType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefFieldType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1122,7 +1122,7 @@ items:
     parameters:
     - id: justification
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UdefJustification\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.UdefJustification\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1473,7 +1473,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: ID of owning table (contact, person, project). See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: ID of owning table (contact, person, project). See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
