--- a/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfoAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfoAgent.yml
@@ -82,7 +82,7 @@ items:
       description: 
     - id: fieldType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefFieldType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefFieldType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: isIndexed
       type: CRMScript.Global.Bool
       description: true if yes; false if no
@@ -126,10 +126,10 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: fieldType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefFieldType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefFieldType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -173,7 +173,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Bool
       description:
@@ -196,7 +196,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Bool
       description:
@@ -241,7 +241,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: userGroupId
       type: CRMScript.Global.Integer
       description: 
@@ -318,7 +318,7 @@ items:
       description: 
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -343,7 +343,7 @@ items:
       description: 
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -365,7 +365,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo[]
   example: 
@@ -387,7 +387,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: userGroupId
       type: CRMScript.Global.Integer
       description: 
@@ -415,7 +415,7 @@ items:
       description: 
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -462,7 +462,7 @@ items:
       description: 
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
   example: 
@@ -487,7 +487,7 @@ items:
       description: 
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo[]
   example: 
@@ -531,7 +531,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.NetServer.NSUserDefinedFieldInfo[]
   example: 
@@ -553,7 +553,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: userGroupId
       type: CRMScript.Global.Integer
       description: 
@@ -597,7 +597,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Bool
       description:
@@ -619,7 +619,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Integer
       description:
@@ -642,7 +642,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -730,7 +730,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: active
       type: CRMScript.Global.Bool
       description: 
@@ -754,7 +754,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -775,7 +775,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: rankedFieldsIds
       type: CRMScript.Global.Integer[]
       description: 
@@ -799,7 +799,7 @@ items:
     parameters:
     - id: ownerType
       type: CRMScript.Global.Integer
-      description: See <xref href=\"UDefType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: See <xref href=\"CRMScript.NetServer.UDefType\" data-throw-if-not-resolved=\"false\"></xref>
     - id: udefFieldId
       type: CRMScript.Global.Integer
       description: 
