--- a/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSVisibleFor.yml
@@ -71,7 +71,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: See <xref href=\"Visibility\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.Visibility\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSVisibleFor thing;\nInteger visibility = thing.GetVisibility();</code></pre>\n"
 - uid: CRMScript.NetServer.NSVisibleFor.GetVisibleId()
@@ -133,7 +133,7 @@ items:
     parameters:
     - id: visibility
       type: CRMScript.Global.Integer
-      description: See <xref href=\"Visibility\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.Visibility\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
