--- a/docs/api-reference/CRMScript.NetServer.NSWebPanelEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebPanelEntity.yml
@@ -425,7 +425,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The encoding of the URL. See <xref href=\"UrlEncoding\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The encoding of the URL. See <xref href=\"CRMScript.NetServer.UrlEncoding\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSWebPanelEntity thing;\nInteger urlEncoding = thing.GetUrlEncoding();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebPanelEntity.GetVisibleIn()
@@ -878,7 +878,7 @@ items:
     parameters:
     - id: urlEncoding
       type: CRMScript.Global.Integer
-      description: The encoding of the URL. See <xref href=\"UrlEncoding\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The encoding of the URL. See <xref href=\"CRMScript.NetServer.UrlEncoding\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
