--- a/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
@@ -211,7 +211,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Webhook status, should we post events to the URL? See <xref href=\"WebhookState\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Webhook status, should we post events to the URL? See <xref href=\"CRMScript.NetServer.WebhookState\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSWebhook thing;\nInteger state = thing.GetState();</code></pre>\n"
 - uid: CRMScript.NetServer.NSWebhook.GetTargetUrl()
@@ -485,7 +485,7 @@ items:
     parameters:
     - id: state
       type: CRMScript.Global.Integer
-      description: Webhook status. Should we post events to the URL? See <xref href=\"WebhookState\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Webhook status. Should we post events to the URL? See <xref href=\"CRMScript.NetServer.WebhookState\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
