--- a/docs/api-reference/CRMScript.NetServer.NSWebhookAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhookAgent.yml
@@ -103,7 +103,7 @@ items:
       description: 
     - id: statusFilter
       type: CRMScript.Global.Integer
-      description: See <xref href=\"WebhookState\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.WebhookState\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSWebhook[]
   example: 
