--- a/docs/api-reference/CRMScript.NetServer.NSCustomerCenterConfig.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerCenterConfig.yml
@@ -161,7 +161,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What kind of data is in this row. What kind of data is in this row. See <xref href=\"ConfigType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: What kind of data is in this row. What kind of data is in this row. See <xref href=\"CRMScript.NetServer.ConfigType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSCustomerCenterConfig thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCustomerCenterConfig.GetUpdated()
@@ -331,7 +331,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: What kind of data is in this row. See <xref href=\"ConfigType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: What kind of data is in this row. See <xref href=\"CRMScript.NetServer.ConfigType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
