--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoBase.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoBase.yml
@@ -131,7 +131,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What sort of data does this field contain. See <xref href=\"FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What sort of data does this field contain. See <xref href=\"CRMScript.NetServer.FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSFieldInfoBase thing;\nInteger fieldType = thing.GetFieldType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoBase.GetHideField()
@@ -397,7 +397,7 @@ items:
     parameters:
     - id: fieldType
       type: CRMScript.Global.Integer
-      description: What sort of data does this field contain. See <xref href=\"FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What sort of data does this field contain. See <xref href=\"CRMScript.NetServer.FieldMetadataType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
