--- a/docs/api-reference/CRMScript.NetServer.NSImportAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImportAgent.yml
@@ -82,7 +82,7 @@ items:
       description: Connection ID for ERP system
     - id: erpActorType
       type: CRMScript.Global.Integer
-      description: ERP actor type. See <xref href=\"ErpActorType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: ERP actor type. See <xref href=\"CRMScript.NetServer.ErpActorType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSImportErpData
   example: 
