--- a/docs/api-reference/CRMScript.NetServer.NSParticipantSyncData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSParticipantSyncData.yml
@@ -331,7 +331,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The appointment status for this participant. See <xref href=\"AppointmentStatus\" data-throw-if-not-resolved=\"false\"></xref>
+      description: The appointment status for this participant. See <xref href=\"CRMScript.NetServer.AppointmentStatus\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSParticipantSyncData thing;\nInteger participantStatus = thing.GetParticipantStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSParticipantSyncData.GetPersonAcademicTitle()
@@ -1012,7 +1012,7 @@ items:
     parameters:
     - id: participantStatus
       type: CRMScript.Global.Integer
-      description: The appointment status for this participant. See <xref href=\"AppointmentStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The appointment status for this participant. See <xref href=\"CRMScript.NetServer.AppointmentStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
