--- a/docs/api-reference/CRMScript.NetServer.NSPocketDeviceInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketDeviceInfo.yml
@@ -139,7 +139,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What platform does this device belong to. See <xref href=\"NotificationPlatform\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What platform does this device belong to. See <xref href=\"CRMScript.NetServer.NotificationPlatform\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPocketDeviceInfo thing;\nInteger platform = thing.GetPlatform();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketDeviceInfo.GetPNSHandle()
@@ -287,7 +287,7 @@ items:
     parameters:
     - id: platform
       type: CRMScript.Global.Integer
-      description: What platform does this device belong to. See <xref href=\"NotificationPlatform\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: What platform does this device belong to. See <xref href=\"CRMScript.NetServer.NotificationPlatform\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
