--- a/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
@@ -225,7 +225,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The type of notification this is. See <xref href=\"NotificationMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The type of notification this is. See <xref href=\"CRMScript.NetServer.NotificationMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSPocketNotificationMessage thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPocketNotificationMessage.GetUrl()
@@ -441,7 +441,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: The type of notification this is. See <xref href=\"NotificationMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: The type of notification this is. See <xref href=\"CRMScript.NetServer.NotificationMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
