--- a/docs/api-reference/CRMScript.NetServer.NSProductExtraDataField.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProductExtraDataField.yml
@@ -71,7 +71,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: String, URL, image. How the value should be interpreted. See <xref href=\"ExtraDataFieldType\" data-throw-if-not-resolved=\"false\"></xref>
+      description: String, URL, image. How the value should be interpreted. See <xref href=\"CRMScript.NetServer.ExtraDataFieldType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSProductExtraDataField thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProductExtraDataField.GetValue()
@@ -133,7 +133,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: String, URL, image. How the value should be interpreted. See <xref href=\"ExtraDataFieldType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: String, URL, image. How the value should be interpreted. See <xref href=\"CRMScript.NetServer.ExtraDataFieldType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
