--- a/docs/api-reference/CRMScript.NetServer.NSProjectTypeEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectTypeEntity.yml
@@ -85,7 +85,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Units for the duration. See <xref href=\"DurationUnit\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Units for the duration. See <xref href=\"CRMScript.NetServer.DurationUnit\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSProjectTypeEntity thing;\nInteger durationUnit = thing.GetDurationUnit();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProjectTypeEntity.GetHasGuide()
@@ -287,7 +287,7 @@ items:
     parameters:
     - id: durationUnit
       type: CRMScript.Global.Integer
-      description: Units for the duration. See <xref href=\"DurationUnit\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Units for the duration. See <xref href=\"CRMScript.NetServer.DurationUnit\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
