--- a/docs/api-reference/CRMScript.NetServer.NSQuoteAlternative.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteAlternative.yml
@@ -431,7 +431,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"CRMScript.NetServer.QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteAlternative thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteAlternative.GetSubTotal()
@@ -491,7 +491,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Has the pre-calculated (from ERP) price information been overridden, and how. See <xref href=\"ValueOverride\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Has the pre-calculated (from ERP) price information been overridden, and how. See <xref href=\"CRMScript.NetServer.ValueOverride\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteAlternative thing;\nInteger userValueOverride = thing.GetUserValueOverride();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteAlternative.GetVAT()
@@ -925,7 +925,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"CRMScript.NetServer.QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -991,7 +991,7 @@ items:
     parameters:
     - id: userValueOverride
       type: CRMScript.Global.Integer
-      description: Has the pre-calculated (from ERP) price information been overridden, and how. See <xref href=\"ValueOverride\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: Has the pre-calculated (from ERP) price information been overridden, and how. See <xref href=\"CRMScript.NetServer.ValueOverride\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
