--- a/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
@@ -328,7 +328,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: See <xref href=\"RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSRoleEntity
   example: 
@@ -908,7 +908,7 @@ items:
     parameters:
     - id: roleType
       type: CRMScript.Global.Integer
-      description: MDO List name = 'FunctionRights', extra='roleType=0'. See <xref href=\"RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: MDO List name = 'FunctionRights', extra='roleType=0'. See <xref href=\"CRMScript.NetServer.RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSSelectableMDOListItem[]
   example: 
@@ -930,7 +930,7 @@ items:
     parameters:
     - id: roleType
       type: CRMScript.Global.Integer
-      description: MDO List name = 'Roles', extra='0' (roleType) See <xref href=\"RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: MDO List name = 'Roles', extra='0' (roleType) See <xref href=\"CRMScript.NetServer.RoleType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.NetServer.NSSelectableMDOListItem[]
   example: 
@@ -1091,7 +1091,7 @@ items:
       description: 
     - id: relationToOwner
       type: CRMScript.Global.Integer
-      description: See <xref href=\"RoleRelationToOwner\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.RoleRelationToOwner\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.String
       description:
@@ -2092,7 +2092,7 @@ items:
       description: 
     - id: relationToOwner
       type: CRMScript.Global.Integer
-      description: See <xref href=\"RoleRelationToOwner\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.RoleRelationToOwner\" data-throw-if-not-resolved=\"false\"></xref>.
     - id: dataRightValue
       type: CRMScript.Global.String
       description: 
@@ -2131,7 +2131,7 @@ items:
       description: 
     - id: externalUserInfoModification
       type: CRMScript.Global.Integer
-      description: See <xref href=\"ExternalUserInfoModification\" data-throw-if-not-resolved=\"false\"></xref>.
+      description: See <xref href=\"CRMScript.NetServer.ExternalUserInfoModification\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
